; ModuleID = '/home/carl/AnghaBench/linux/drivers/target/extr_target_core_ua.c_target_ua_allocate_lun.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/target/extr_target_core_ua.c_target_ua_allocate_lun.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.se_node_acl = type { i32 }
%struct.se_dev_entry = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @target_ua_allocate_lun(%struct.se_node_acl* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.se_node_acl*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.se_dev_entry*, align 8
  store %struct.se_node_acl* %0, %struct.se_node_acl** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.se_node_acl*, %struct.se_node_acl** %5, align 8
  %11 = icmp ne %struct.se_node_acl* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %4
  br label %28

13:                                               ; preds = %4
  %14 = call i32 (...) @rcu_read_lock()
  %15 = load %struct.se_node_acl*, %struct.se_node_acl** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call %struct.se_dev_entry* @target_nacl_find_deve(%struct.se_node_acl* %15, i32 %16)
  store %struct.se_dev_entry* %17, %struct.se_dev_entry** %9, align 8
  %18 = load %struct.se_dev_entry*, %struct.se_dev_entry** %9, align 8
  %19 = icmp ne %struct.se_dev_entry* %18, null
  br i1 %19, label %22, label %20

20:                                               ; preds = %13
  %21 = call i32 (...) @rcu_read_unlock()
  br label %28

22:                                               ; preds = %13
  %23 = load %struct.se_dev_entry*, %struct.se_dev_entry** %9, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @core_scsi3_ua_allocate(%struct.se_dev_entry* %23, i32 %24, i32 %25)
  %27 = call i32 (...) @rcu_read_unlock()
  br label %28

28:                                               ; preds = %22, %20, %12
  ret void
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.se_dev_entry* @target_nacl_find_deve(%struct.se_node_acl*, i32) #1

declare dso_local i32 @rcu_read_unlock(...) #1

declare dso_local i32 @core_scsi3_ua_allocate(%struct.se_dev_entry*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
